--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
       <h2>Why Choose Our Installer?</h2>
       <div class="features-grid">
         <div class="feature-item">
-          <img src="icon-fast.svg" alt="Fast">
+          <img src="images/fast.png" alt="Fast">
           <h3>Fast</h3>
           <p>Lightning-fast downloads and installations.</p>
         </div>
         <div class="feature-item">
-          <img src="icon-easy.svg" alt="Easy">
+          <img src="images/easy.png" alt="Easy">
           <h3>Easy to Use</h3>
           <p>Simple and intuitive interface for everyone.</p>
         </div>
         <div class="feature-item">
-          <img src="icon-support.svg" alt="Support">
+          <img src="images/support.png" alt="Support">
           <h3>24/7 Support</h3>
           <p>We're here to help you at any time.</p>
         </div>
