--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="feature-item">
           <img src="images/easy.png" alt="Easy">
           <h3>Easy to Use</h3>
-          <p>Simple and intuitive interface for everyone.</p>
+          <p>Simple and Just in one click it will download it.</p>
         </div>
         <div class="feature-item">
           <img src="images/support.png" alt="Support">
