--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
       <div class="faq-item">
         <h3 class="faq-question">What platforms are supported? <span class="faq-toggle">+</span></h3>
-        <p class="faq-answer">Our installer works on Windows, Mac, and Linux.</p>
+        <p class="faq-answer">Our installer works ONLY on Windows, also Supports CUSTOM ROM.</p>
       </div>
       <div class="faq-item">
         <h3 class="faq-question">Where can I get support? <span class="faq-toggle">+</span></h3>
