--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Welcome to Wolf Mena Installer</h1>
       <p>The fastest and easiest way to install WOLF MENA in one click!</p>
       <div class="buttons">
-        <a href="https://yourdownloadlink.com" class="btn btn-download">Download Now</a>
+        <a href="https://github.com/Enyzelle/wolf-mena-installer/releases/download/v0.1/WOLF-MENA-Installer.zip" class="btn btn-download">Download Now</a>
         <a href="#help" class="btn btn-help">Need Help?</a>
       </div>
     </div>
